@@ -460,7 +460,7 @@ function on_return_submit(event){
         qw(form_id id type printed emailed queued title vc terms discount 
            creditlimit creditremaining tradediscount business closedto locked 
            shipped oldtransdate recurring reverse batch_id subtype 
-           meta_number separate_duties nextsub)
+           meta_number separate_duties nextsub default_reportable)
     );
 
     if ($form->{notice}){
